; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mbedtls/port/esp32s2beta/extr_sha.c_esp_sha_block.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mbedtls/port/esp32s2beta/extr_sha.c_esp_sha_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHA_MODE_REG = common dso_local global i32 0, align 4
@SHA_M_BASE = common dso_local global i64 0, align 8
@SHA_START_REG = common dso_local global i32 0, align 4
@SHA_CONTINUE_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_sha_block(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @SHA_MODE_REG, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @REG_WRITE(i32 %7, i32 %8)
  %10 = load i64, i64* @SHA_M_BASE, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @block_length(i32 %13)
  %15 = call i32 @memcpy_endianswap(i8* %11, i8* %12, i32 %14)
  %16 = call i32 (...) @esp_sha_wait_idle()
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @SHA_START_REG, align 4
  %21 = call i32 @REG_WRITE(i32 %20, i32 1)
  br label %25

22:                                               ; preds = %3
  %23 = load i32, i32* @SHA_CONTINUE_REG, align 4
  %24 = call i32 @REG_WRITE(i32 %23, i32 1)
  br label %25

25:                                               ; preds = %22, %19
  ret void
}

declare dso_local i32 @REG_WRITE(i32, i32) #1

declare dso_local i32 @memcpy_endianswap(i8*, i8*, i32) #1

declare dso_local i32 @block_length(i32) #1

declare dso_local i32 @esp_sha_wait_idle(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
